--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <title>My Portfolio</title>
     <style>
         body {
-            font-family: Inter, sans-serif;
+            font-family: Arial, sans-serif;
             margin: 20px;
         }
     </style>
 </head>
 <body>
     <h1>Welcome to My CS180 Portfolio!</h1>
-    <a href="./1/index.html">Project 0</a>
+    <a href="./0/index.html">Project 0</a>
 </body>
